# AuditOS

./: .env.example  .gitignore  DEPLOY.md  README.md  architecture-diagram.html  demo-script.md  devpost-submission.md
.claude/: settings.local.json
backend/: Dockerfile  dependencies.py  firestore_client.py  main.py  pyproject.toml  store.py  store_firestore.py
backend/agents/: __init__.py  _standards_data.py  desk_tools.py  domains.py  extraction_agent.py  live_audit_agent.py  report_agent.py  root_agent.py
backend/data/: demo_dataset.json
backend/data/seed/: case_construction_safety.json  case_environmental.json  case_fire_safety.json  case_food_manufacturing.json  case_food_safety.json  case_logistics.json  case_metal_works.json
backend/models/: __init__.py  audit_log.py  case.py  document.py  ledger.py  live_session.py  measure.py  review.py
backend/routers/: audit_log_router.py  cases.py  compliance.py  documents.py  extract.py  ledger.py  live_audit.py  measures.py  report.py  reviews.py  upload.py  ws.py
backend/services/: __init__.py  audit_log_service.py  gemini_service.py
backend/tests/: conftest.py  test_voice_fixes.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(audit)/: layout.tsx
frontend/app/(platform)/: layout.tsx
frontend/app/diagram/: page.tsx
frontend/components/chart/: BenchmarkBarChart.tsx  CO2BarChart.tsx  EnergyAreaChart.tsx  ROIScatterChart.tsx  (+2 more)
frontend/lib/: api.ts  demo-data.ts  i18n.tsx  live-audit.ts  types.ts  workflow-state.ts
(+49 files in other folders)
